# oh-my-pi

./: .baseline-auth-storage.ts  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  bunfig.toml  entrypoint.sh  package.json
.github/: VOUCHED.td
.github/actions/build-native/: action.yml
.github/actions/setup-system-deps/: action.yml
.github/workflows/: ci.yml
.omp/commands/: triage.md
.omp/skills/system-prompts/: SKILL.md  small-models.md
crates/brush-core-vendored/src/: commands.rs  interp.rs
crates/pi-ast/src/: ops.rs
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: ast.rs  clipboard.rs  desktop.rs  desktop_unsupported.rs  fd.rs  glob.rs  glob_util.rs  grep.rs  lib.rs  pty.rs  shell.rs  text.rs
crates/pi-natives/src/chunk/: ast_bash_make_diff.rs  ast_c_cpp_objc.rs  ast_csharp_java.rs  ast_css.rs  ast_data_formats.rs  ast_elixir.rs  ast_go.rs  ast_haskell_scala.rs  ast_html_xml.rs  ast_ipynb.rs  ast_js_ts.rs  ast_markup.rs  ast_misc.rs  ast_nix_hcl.rs  ast_python.rs  ast_ruby_lua.rs  ast_rust.rs  ast_tlaplus.rs  common.rs  defaults.rs  edit.rs  indent.rs  kind.rs  mod.rs  render.rs  resolve.rs
crates/pi-shell/: Cargo.toml
crates/pi-shell/src/: coreutils.rs  fd.rs  lib.rs  process.rs  shell.rs  which.rs
crates/pi-shell/src/minimizer/: engine.rs
crates/pi-shell/src/minimizer/defs/: liquibase.toml  rustc.toml
crates/pi-shell/src/minimizer/filters/: mod.rs
crates/pi-uu-diff/: Cargo.toml
crates/pi-uu-diff/src/: lib.rs
crates/pi-uu-grep/: Cargo.toml
crates/pi-uu-grep/src/: lib.rs  rg.rs
crates/pi-uutils-ctx/src/: lib.rs
crates/pi-walker/src/: lib.rs
docs/: advisor-watchdog.md  ai-schema-normalize.md  approval-mode.md  auth-broker-gateway.md  bash-tool-runtime.md  compaction.md  computer-use.md  config-usage.md  context-files.md  custom-tools.md  environment-variables.md  extensions.md  hooks.md  install-id.md  local-models.md  magic-keywords.md  models.md  natives-binding-contract.md  natives-build-release-debugging.md  natives-text-search-pipeline.md  porting-from-pi-mono.md  providers.md  resolve-tool-runtime.md  rpc.md  rulebook-matching-pipeline.md  sdk.md  secrets.md  session-operations-export-share-fork-resume.md  session-tree-plan.md  session.md  settings.md  system-prompt-customization.md  task-agent-discovery.md  ttsr-injection-lifecycle.md  tui-core-renderer.md  tui-runtime-internals.md
docs/skills/: authoring-extensions.md
docs/tools/: ast-edit.md  bash.md  browser.md  checkpoint.md  computer.md  debug.md  edit.md  eval.md  find.md  hub.md  inspect_image.md  lsp.md  read.md  search.md  search_tool_bm25.md  task.md  todo.md  web_search.md
patches/: @agentclientprotocol%2Fsdk@1.2.1.patch  @ark%2Fschema@0.56.2.patch  puppeteer-core@25.3.0.patch
python/omp-rpc/src/omp_rpc/: __init__.py  client.py  protocol.py
python/omp-rpc/tests/: test_client.py  test_host_uris.py  test_protocol.py  test_user_group.py
python/robomp/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
python/robomp/docs/: pr-review-handoff.md
python/robomp/src/: config.py  db.py  git_ops.py  github_backend.py  github_client.py  github_events.py  host_tools.py  issue_index.py  manual_triage.py  persona.py  pragmas.py  proxy_client.py  queue.py  sandbox.py  server.py  tasks.py  worker.py
python/robomp/src/prompts/: directive.md  followup_comment.md  host_tools.toml  kickoff_issue.md  kickoff_pr_review.md  review_completion_reminder.md  system_append.md  system_append_pr_review.md  todo_phases.toml
python/robomp/src/proxy/: server.py
python/robomp/tests/: conftest.py  test_config.py  test_db.py  test_github_client.py  test_github_events.py  test_host_tools.py  test_issue_index.py  test_persona.py  test_proxy_client.py  test_proxy_server.py  test_queue_dispatch.py  test_sandbox.py  test_server.py  test_status_contract.py  test_tasks_directive.py  test_worker.py
python/robomp/web/: package.json
python/robomp/web/src/: types.ts  work-items.test.ts
python/robomp/web/src/components/: Trigger.tsx
python/robomp/web/src/components/shell/: Vitals.tsx
python/robomp/web/test/fixtures/: status-contract.json
scripts/: analyze_small_edits.py  bench-edit-hashline-sep.ts  ci-build-native.test.ts  ci-build-native.ts  ci-release-build-binaries.test.ts  ci-release-build-binaries.ts  ci-release-publish.test.ts  ci-release-publish.ts  ci-test-ts.ts  claude-trace.ts  dump-edit-history.ts  edit-benchmark.py  edit_benchmark_common.py  eval-bench-runs.ts  fix-changelogs.test.ts  fix-changelogs.ts  install-sh.test.ts  install.sh  musl-release.test.ts  rate-edit-tool.py  release.ts  tool-prompt-usage.ts  tool_io.py
scripts/session-stats/: analyze.py  analyze_search_relevance.py  analyze_selector_reads.py  harmony_backtest.py  optimize_read_config.py  plot_read_summarizer.py  plot_tools.py  read_optimizer.py  sync.py
src/robomp/: dashboard.py  sandbox.py
tests/: test_db.py  test_sandbox.py  test_server.py
