# diff implemented from scratch on top of the `similar` diffing library, with
# I/O and path resolution routed through pi-uutils-ctx so it can run in-process
# as a shell builtin. Entry point: `pi_uu_diff::run`.
[package]
name = "pi_uu_diff"
version = "0.8.0"
edition = "2024"
license = "MIT"
description = "diff ~ similar-backed file comparison (in-process shell builtin)"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["wrap_help"] }
pi-uutils-ctx = { path = "../pi-uutils-ctx" }
similar = "3.1.0"

[dev-dependencies]
parking_lot.workspace = true
tempfile = "3"
